--- a/course-02/exercises/udacity-c2-restapi/package.json
+++ b/course-02/exercises/udacity-c2-restapi/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": { "node": "14.16.0"},
   "scripts": {
     "start": "node server.js",
     "tsc": "tsc",
